[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UI/UI001.png" type="Texture" id=1]
[ext_resource path="res://scenes/store/StorePanel/StorePanel.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/Store/store_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/UI/Store/store_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/UI/UI.tres" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 3, 762, 112, 6 )

[node name="MainContainer" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 182.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 250.0
margin_bottom = 182.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
self_modulate = Color( 0.611765, 0.243137, 0.243137, 1 )
margin_right = 250.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 230.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Store"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_bottom = 21.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
rect_pivot_offset = Vector2( 804.278, 520 )
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 210.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
texture = SubResource( 1 )
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 210.0
margin_bottom = 106.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 103.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 46.0
margin_bottom = 9.0
size_flags_horizontal = 0
text = "Money: $30"

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 42.0
margin_bottom = 22.0
size_flags_horizontal = 0
text = "Health: 89"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 210.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="RifleAmmoLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 103.0
margin_bottom = 9.0
text = "Rifle Ammo:   200"

[node name="SniperAmmoLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 13.0
margin_right = 103.0
margin_bottom = 22.0
text = "Sniper Ammo:  200"

[node name="ShotgunAmmoLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 103.0
margin_bottom = 35.0
text = "Shotgun Ammo: 200"
